# rust-playground

./: .gitignore  Cargo.toml
axum-app/: Cargo.toml
axum-app/src/: main.rs
axum-app/static/: default.html
axum-todo/: Cargo.toml
axum-todo/src/: main.rs
basic/: Cargo.toml
basic/src/: main.rs  tokio_block_on.rs  tokio_mpsc_oneshot.rs
basic/src/closure/: closure_1.rs  closure_2.rs  closure_3.rs
basic/src/err/: err_io_read.rs
basic/src/macro/: macro_add.rs
minigrep/: demo.txt
minigrep/src/: lib.rs  main.rs
nom-app/: Cargo.toml
nom-app/src/: parser_0.rs  parser_1.rs  parser_16digit_color.rs  parser_coordinate.rs
src/: main.rs  tokio_mpsc.rs  tokio_mpsc_oneshot.rs  tokio_mutex.rs  tokio_rwlock.rs
src/err/: err_io_read.rs
src/temp/: simple_file_1.txt
unsafe-app/: Cargo.toml
unsafe-app/src/: main.rs  raw_pointer.rs  slice_vec_unsafe.rs  static_attr.rs
