[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="tokio-mutex"
path="src/tokio_mutex.rs"

[[bin]]
name="tokio-rwlock"
path="src/tokio_rwlock.rs"

[[bin]]
name="tokio-mpsc"
path="src/tokio_mpsc.rs"

[[bin]]
name="tokio-mpsc-oneshot"
path="src/tokio_mpsc_oneshot.rs"

[[bin]]
name="tokio-block-on"
path="src/tokio_block_on.rs"

[[bin]]
name="err-io-read"
path="src/err/err_io_read.rs"

[[bin]]
name = "macro_add"
path = "src/macro/macro_add.rs"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
